added match image,age, name to the match page and started about page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="slogan-button-flexbox">
                     <!-- slogan section-->
                     <div id="slogan">
-                        <p>THERE GOES THE NEIGHBORHOOD</p>
+                        <p>OH! THE <span style="color:black;font-family:'Open Sans condensed';font-weight: bolder;">PAW</span>SSIBILITIES</p>
                     </div>
                     <!-- button to create profile -->
                     <button type="button" id="createProfileBtn"> 
