--- a/matches.html
+++ b/matches.html
@@ -1,58 +1,52 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"> -->
-        <link href="https://unpkg.com/pageable@latest/dist/pageable.min.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chango&family=Open+Sans+Condensed:wght@300&family=Thasadith&display=swap"/>
-        <link rel="stylesheet" href="./assets/css/hamburger.css">
-        <link rel="stylesheet" href="./assets/css/matches.css">
-        <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw.png"/>
-        <title>Pawpals/Matches</title>
-    </head>
 
-    <body>
-        <div class="pg-wrapper">
-            <div id="container" class="pg-container">
-                <!-- pages -->
-                <div data-anchor="page-1" id="page-1" class="pg-page pg-active">
-                    <!--Paw Pals logo-->
-                    <div>
-                        <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
-                    </div>
-                    <!-- hamburger dropdown -->
-                    <div class="menu">
-                        <div class="hamburger-menu-wrapper">
-                        <button class="hamburger-menu">
-                            <span>toggle menu</span>
-                        </button>
-                        </div>
-                        <div class="menu-list">
-                        <a href="about.html" id="ml-about">ABOUT</a><br>
-                        <a href="my-profile.html" id="ml-profile">MY PROFILE</a><br>
-                        <a href="swipe.html" id="ml-swipe">SWIPE</a><br>
-                        <a href="contact-us.html" id="ml-contact">CONTACT US</a><br>
-                        </div>
-                    </div>
-                    <div class="menu-overlay"></div>
-                    <div id="board"></div>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chango&family=Open+Sans+Condensed:wght@300&family=Thasadith&display=swap" />
+  <link rel="stylesheet" href="./assets/css/hamburger.css">
+  <link rel="stylesheet" href="./assets/css/matches.css">
+  <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw.png" />
+  <title>Pawpals/Matches</title>
+</head>
 
-                    <!-- <div class="columns features">
-                        <div id="column-one" class="column is-3"></div>
-                        <div id="column-two" class="column is-3"></div>
-                        <div id="column-three" class="column is-3"></div>
-                        <div id="column-four" class="column is-3"></div>
-                    </div> -->
-                </div>
-            </div>
-        </div>
+<body>
+  <!--Paw Pals logo-->
+  <div>
+    <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
+  </div>
+  <!-- hamburger dropdown -->
+  <div class="menu">
+    <div class="hamburger-menu-wrapper">
+      <button class="hamburger-menu">
+        <span>toggle menu</span>
+      </button>
+    </div>
+    <div class="menu-list">
+      <a href="about.html" id="ml-about">ABOUT</a><br>
+      <a href="my-profile.html" id="ml-profile">MY PROFILE</a><br>
+      <a href="swipe.html" id="ml-swipe">SWIPE</a><br>
+      <a href="contact-us.html" id="ml-contact">CONTACT US</a><br>
+    </div>
+  </div>
+  <div class="menu-overlay"></div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/pageable@latest/dist/pageable.min.js"></script>
-        <script src="./assets/js/hamburger.js"></script>
-        <script src="./assets/js/matches.js"></script>
-    </body>
+  <!-- Page heading -->
+  <h1 class="title is-1">Your Pals</h1>
+
+  <!-- Match Cards -->
+  <div class="columns">
+    <div class="column is-6">
+      <!-- dynamically created cards go here -->
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+  <script src="./assets/js/hamburger.js"></script>
+  <script src="./assets/js/matches.js"></script>
+</body>
 
 </html>
