--- a/my-profile.html
+++ b/my-profile.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/css/hamburger.css"/>
   <link rel="stylesheet" href="assets/css/my-profile.css"/>
   <link rel="shortcut icon" type="image/png" href="./assets/images/pink_paw.png"/>
-  <title>My Profile</title>
+  <title>PawPals/My Profile</title>
 </head>
 <body>
   <div class="menu">
@@ -83,9 +83,9 @@
                 </header>
 
                   <div class="card-content">
-                      <p class="subtitle is-6 age">Average age of swipe right: <span class="age-number"></span></p>
-                      <p class="subtitle is-6 match">Number of matches: <span class="match-number"></span></p>
-                      <p class="subtitle is-6 match">Species which matches the most with that profile: <span class="match-number"></span></p>
+                      <p class="subtitle is-6 age">Average age of swipe right <span class="age-number"></span>11</p>
+                      <p class="subtitle is-6 match">Number of matches <span class="match-number"></span>100</p>
+                      <p class="subtitle is-6 match">Species which matches the most with that profile <span class="match-number"></span>111</p>
                   </div>
               </div>
           </div>
