add member photos

--- a/about.html
+++ b/about.html
@@ -45,19 +45,19 @@
 
       <div class="team-profiles is-large">
           <div class="member">
-              <img src = "https://via.placeholder.com/300/09f/fff.png">
+              <img class = photo id=member1>
               <span class = "member-name">NINJA</span>
           </div>
           <div class="member">
-            <img src = "https://via.placeholder.com/300/09f/fff.png">
+            <img class = photo id=member2 src="assets/images/luffy.jpeg">
             <span class = "member-name">CHELCIE DE ALMEIDA</span>
           </div>
           <div class="member">
-            <img src = "https://via.placeholder.com/300/09f/fff.png">
+            <img class = photo id=member3>
             <span class = "member-name">WYATT SIMMONS</span>
           </div>
           <div class="member">
-            <img src = "https://via.placeholder.com/300/09f/fff.png">
+            <img class = photo id=member4>
             <span class = "member-name">NOEMIE GRAU</span>
           </div>
       </div>
