added profile picture on about page

--- a/about.html
+++ b/about.html
@@ -40,25 +40,25 @@
         Can you imagine a world where all you have to look at are these four walls, and your owner's stupid face? Depending on when you're reading this you know what we're talking about...now just imagine how hard it sucks for your little friends. Yup! It's a <strong>Cat</strong>astrophe so don't even... 
         That's it...That's the speech
         <h2>Meet The Team</h2>
-        <p>Who let the dogs out? Us, the developups! Feel free to send us a meowssage to say hi! We don't bite. Well actually, Noemi might. Don't make her angry. You will be sorry.</p>
+        <p>Who let the dogs out? Us, the developups! Feel free to send us a meowssage to say hi! We don't bite. Well actually, Cat might. Don't make her angry. You will be sorry.</p>
       </div>
 
       <div class="team-profiles is-large">
           <div class="member">
-              <img class = photo id=member1>
+              <img class = photo id=member1 alt="ninja">
               <span class = "member-name">NINJA</span>
           </div>
           <div class="member">
-            <img class = photo id=member2 src="assets/images/luffy.jpeg">
+            <img class = photo id=member2 src="assets/images/luffy.jpeg" alt="Chelcie">
             <span class = "member-name">CHELCIE DE ALMEIDA</span>
           </div>
           <div class="member">
-            <img class = photo id=member3>
+            <img class = photo id=member3 alt="Wyatt" src="">
             <span class = "member-name">WYATT SIMMONS</span>
           </div>
           <div class="member">
-            <img class = photo id=member4>
-            <span class = "member-name">NOEMIE GRAU</span>
+            <img class = photo id=member4 alt="CAT">
+            <span class = "member-name">Cat</span>
           </div>
       </div>
 
