added function that display the analytic figures

--- a/my-profile.html
+++ b/my-profile.html
@@ -124,13 +124,13 @@
                       <p class="avgAgeSwipes">28</p>
 
                       <p class="subtitle is-6 no-bottom">Number of swipes <span></span></p>
-                      <p class="numberSwipes">100</p>
+                      <p id="numberSwipes" class="numberSwipes"></p>
 
                       <p class="subtitle is-6 no-bottom">Number of Matches <span></span></p>
-                      <p class="numberMatches">24</p>
+                      <p id="numberMatches" class="numberMatches"></p>
 
                       <p class="subtitle is-6 no-bottom">Match Ratio <span></span></p>
-                      <p class="matchRatio">56</p>
+                      <p id="matchRatio" class="matchRatio"></p>
                   </div>
               </div>
           </div>
