--- a/about.html
+++ b/about.html
@@ -45,19 +45,19 @@
 
       <div class="team-profiles is-large">
           <div class="member">
-              <img class = photo id=member1 alt="ninja">
+              <img class = 'photo' id='member1' src="assets/images/heckin-fierce.jpeg" alt="ninja">
               <span class = "member-name">NINJA</span>
           </div>
           <div class="member">
-            <img class = photo id=member2 src="assets/images/luffy.jpeg" alt="Chelcie">
+            <img class ='photo' id='member2' src="assets/images/luffy.jpeg" alt="Chelcie">
             <span class = "member-name">CHELCIE DE ALMEIDA</span>
           </div>
           <div class="member">
-            <img class = photo id=member3 alt="Wyatt" src="">
+            <img class ='photo' id='member3' src="assets/images/overly-polite-cat.jpeg" alt="Wyatt">
             <span class = "member-name">WYATT SIMMONS</span>
           </div>
           <div class="member">
-            <img class = photo id=member4 alt="CAT">
+            <img class ='photo' id='member4' src="assets/images/paint-me-like-a-french-cat.jpeg" alt="CAT">
             <span class = "member-name">Cat</span>
           </div>
       </div>
