got header playing well with every page

--- a/about.html
+++ b/about.html
@@ -14,12 +14,13 @@
 </head>
 <body>
 
-    <!--Paw Pals logo-->
-    <div>
-        <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
-    </div>
+    
 
     <div class="menu">
+      <!--Paw Pals logo-->
+      <div class="logo">
+        <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
+      </div>
         <div class="hamburger-menu-wrapper">
         <button class="hamburger-menu">
             <span>toggle menu</span>
