--- a/matches.html
+++ b/matches.html
@@ -17,11 +17,15 @@
 
 <body>
   <!--Paw Pals logo-->
-  <div>
+  <div class="logo">
     <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
   </div>
   <!-- hamburger dropdown -->
   <div class="menu">
+    <!--Paw Pals logo-->
+    <!-- <div class="logo">
+      <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
+    </div> -->
     <div class="hamburger-menu-wrapper">
       <button class="hamburger-menu">
         <span>toggle menu</span>
