--- a/contact-us.html
+++ b/contact-us.html
@@ -19,13 +19,11 @@
   <title>PawPals/Contact-us</title>
 </head>
 <body>
-
-    <!--Paw Pals logo-->
-    <div>
-        <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
-    </div>
-    
   <div class="menu">
+    <!--Paw Pals logo-->
+    <div class="logo">
+      <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
+    </div>
     <div class="hamburger-menu-wrapper">
     <button class="hamburger-menu">
         <span>toggle menu</span>
