--- a/my-profile.html
+++ b/my-profile.html
@@ -20,13 +20,16 @@
 </head>
 <body>
 
-<header>
+<!-- <header>
   <div>
     <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
   </div>
-</header>
+</header> -->
 
   <div class="menu">
+    <div class="logo">
+      <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
+    </div>
     <div class="hamburger-menu-wrapper">
     <button class="hamburger-menu">
         <span>toggle menu</span>
@@ -40,6 +43,7 @@
     </div>
   </div>
   <div class="menu-overlay"></div>
+
   <div id="my-profile-page" class="bulma">
 
     <div class="columns features">
