--- a/swipe.html
+++ b/swipe.html
@@ -17,21 +17,21 @@
 
     <body>
 
-        <header>
+        <!-- <header>
             <div>
               <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
             </div>
-        </header>
+        </header> -->
 
         <div class="pg-wrapper">
             <div id="container" class="pg-container">
                 <!-- pages -->
                 <div data-anchor="page-1" id="page-1" class="pg-page pg-active">
                     <!-- hamburger dropdown -->
-                    <div>
-                        <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
-                    </div>
                     <div class="menu">
+                        <div class="logo">
+                            <img src="./assets/images/pawpals.png" alt="paw pals logo" class="pawpalsLogo">
+                        </div>
                         <div class="hamburger-menu-wrapper">
                         <button class="hamburger-menu">
                             <span>toggle menu</span>
