--- a/swipe.html
+++ b/swipe.html
@@ -38,7 +38,7 @@
                         </button>
                         </div>
                         <div class="menu-list">
-                        <a href="about.html" id="ml-about" ontouchend="$(location).href('about.html')">ABOUT</a><br>
+                        <a href="about.html" id="ml-about">ABOUT</a><br>
                         <a href="my-profile.html" id="ml-profile">MY PROFILE</a><br>
                         <a href="matches.html" id="ml-matches">MATCHES</a><br>
                         <a href="contact-us.html" id="ml-contact">CONTACT US</a><br>
