my-profile, linked average age to html

--- a/my-profile.html
+++ b/my-profile.html
@@ -125,7 +125,7 @@
 
                   <div class="card-content is-align-items-center" id="analyticsProf">
                       <p class="subtitle is-6 no-bottom">Average Age of Swipes<span></span></p>
-                      <p class="avgAgeSwipes">28</p>
+                      <p id="avgAgeSwipes" class="avgAgeSwipes"></p>
 
                       <p class="subtitle is-6 no-bottom">Number of swipes <span></span></p>
                       <p id="numberSwipes" class="numberSwipes"></p>
